# Duck-Game-Remake

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  ManualDeUsuario.md  README.md  build_game.sh  install_all.sh
client/: CMakeLists.txt  action_handler.cpp  client.cpp  client.h  client_protocol.cpp  client_protocol.h  duck.cpp  duck.h  idea_client.cpp  idea_client.h  main.cpp  printer.cpp  printer.h
client/communication/: CMakeLists.txt  client.cpp  client.h  client_protocol.cpp  main.cpp  printer.cpp  printer.h
client/graphic/: CMakeLists.txt  action_handler.cpp  action_handler.h  animation_movement.cpp  animation_movement.h  animation_state.cpp  animation_state.h  animation_wings.cpp  animation_wings.h  bullet.cpp  bullet.h  camera.cpp  camera.h  chestplate.cpp  chestplate.h  crate.cpp  crate.h  duck.cpp  duck.h  game.cpp  game.h  helmet.cpp  helmet.h  sound.cpp  sound.h  updater_game.cpp  updater_game.h  weapon.cpp  weapon.h
client/graphic/draw/: CMakeLists.txt  draw_bullet.cpp  draw_bullet.h  draw_chestplate.cpp  draw_chestplate.h  draw_crate.cpp  draw_crate.h  draw_explosion.cpp  draw_explosion.h  draw_helmet.cpp  draw_helmet.h  draw_item.cpp  draw_item.h  draw_map.cpp  draw_map.h  draw_throwable.cpp  draw_throwable.h  draw_weapon.cpp  draw_weapon.h  draw_weapon_spawn.cpp  draw_weapon_spawn.h
client/ui/: CMakeLists.txt  Makefile  cmake_install.cmake  editor.cpp  editor.h  editor.ui  lobby_updater.cpp  lobby_updater.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
common/: CMakeLists.txt  game_mode.h  queue.h
common/actions/: action.cpp  action.h  action_macros.h  aim_upwards.cpp  aim_upwards.h  create.cpp  create.h  join.cpp  join.h  jump_flap.cpp  jump_flap.h  move.cpp  move.h  pick_drop.cpp  pick_drop.h  play_dead.cpp  play_dead.h  shoot.cpp  shoot.h
common/actions/base/: action.cpp  action.h  action_macros.h
common/actions/connection/: create.cpp  create.h  join.cpp  join.h  refresh_games.cpp  refresh_games.h  start.cpp  start.h
common/actions/player/: aim_upwards.cpp  aim_upwards.h  cheat.cpp  cheat.h  cheat_macros.h  jump_flap.cpp  jump_flap.h  move.cpp  move.h  pick_drop.cpp  pick_drop.h  play_dead.cpp  play_dead.h  shoot.cpp  shoot.h  still.cpp  still.h
common/configs/: bullet_config.cpp  bullet_config.h  configurations.cpp  configurations.h  configurations.yaml  duck_config.cpp  duck_config.h  editor_config.h
common/connection/: connection.h  connection_reader.cpp  connection_reader.h  connection_sender.cpp  connection_sender.h  reader.h  sender.h
common/events/: broadcast.cpp  broadcast.h  event.cpp  event.h  event_type.h  game_creation.cpp  game_creation.h  game_join.cpp  game_join.h  game_over.cpp  game_over.h  map.cpp  map.h  player.cpp  player.h  player_macros.h  score.cpp  score.h  tile.cpp  tile.h
common/events/base/: event.cpp  event.h  event_type.h
common/events/connection/: game_creation.cpp  game_creation.h  game_join.cpp  game_join.h  game_room.cpp  game_room.h  new_player.cpp  new_player.h  player_data.cpp  player_data.h  refresh_games.cpp  refresh_games.h  start_game.cpp  start_game.h
common/events/items/: CMakeLists.txt  bullet.cpp  bullet.h  bullet_dto.cpp  bullet_dto.h  bullet_macros.h  chestplate.cpp  chestplate.h  crate.cpp  crate.h  explosion.cpp  explosion.h  helmet.cpp  helmet.h  helmet_macros.h  item_spawn.cpp  item_spawn.h  item_spawn_macros.h  throwable_dto.cpp  throwable_dto.h  throwable_macros.h  weapon.cpp  weapon.h  weapon_dto.cpp  weapon_dto.h  weapon_macros.h
common/protocol/: action.cpp  action.h  action_macros.h  encoder.cpp  encoder.h  protocol.cpp  protocol.h  protocol_error.cpp  protocol_error.h
common/protocol/actions/: actions_protocol.cpp  actions_protocol.h
common/protocol/common/: encoder.cpp  encoder.h  protocol.cpp  protocol.h  protocol_error.cpp  protocol_error.h
common/protocol/events/: events_protocol.cpp  events_protocol.h
common/socket/: liberror.cpp  liberror.h  resolver.cpp  resolvererror.cpp  resolvererror.h  socket.cpp  socket.h
editor/: CMakeLists.txt  editor.cpp  editor.h  editor.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  yamlhandler.cpp  yamlhandler.h
server/: CMakeLists.txt  game.cpp  game.h  lobby.cpp  lobby.h  lobby_client.cpp  lobby_client.h  main.cpp  maploader.cpp  maploader.h  monitor_games.cpp  monitor_games.h  monitor_lobby.cpp  monitor_lobby.h  notifier.cpp  notifier.h  server.cpp  server.h  server_protocol.cpp  server_protocol.h  structure.h
server/configs/: bullet_config.cpp  bullet_config.h  configurations.cpp  configurations.h  configurations.yaml  duck_config.cpp  duck_config.h
server/logic/: box.cpp  box.h  configurations.cpp  configurations.h  configurations.yaml  duck.cpp  duck.h  explosion.cpp  explosion.h  game_map.cpp  game_map.h  hitBox.h  itemspawn.cpp  itemspawn.h  structure.h  weapon.h  weapon_factory.cpp  weapon_factory.h
server/logic/bullets/: bullet.cpp  bullet.h
server/logic/collisions/: collision_radius.cpp  collision_radius.h  coordinate.cpp  coordinate.h  position.cpp  position.h
server/logic/maps/: aaa.yaml  forest.yaml  forest1.yaml  lava.yaml  map.yaml  nieve.yaml  nieve1.yaml  prueba.yaml
server/logic/throwables/: banana.cpp  banana.h  grenade.cpp  grenade.h  throwable.cpp  throwable.h
server/logic/weapons/: ak47.cpp  ak47.h  banana.cpp  banana.h  cowboy.cpp  cowboy.h  duelos.cpp  duelos.h  grenade.cpp  grenade.h  laser_rifle.cpp  laser_rifle.h  magnum.cpp  magnum.h  no_weapon.cpp  no_weapon.h  pewpewlaser.cpp  pewpewlaser.h  shotgun.cpp  shotgun.h  sniper.cpp  sniper.h  weapon.cpp  weapon.h
tests/: CMakeLists.txt  test_encoder.cpp
